# climsim

./: .gitignore  Cargo.toml  LICENSE  NEWS.md  README.md  pyproject.toml
.github/workflows/: CI.yml
climsim/: __init__.py  core.py  utils.py
src/: affines.rs  core.rs  distance.rs  distances.rs  lib.rs  utils.rs
