[package]
name = "climsim_rust"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "climsim_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.22", default-features = false, features = ["macros", "gil-refs", "py-clone"]}
pyo3-built = "0.5"
numpy = {version = "0.22", features = ["gil-refs"]}
ndarray = "0.16"
rayon = "1.10"  # or the latest version
num_cpus = "1.16"
simsimd = "6.5.9"
rand = "0.8"
anyhow = "1.0.100"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3 